2006-10-05 Jim Garlick <garlick@llnl.gov>

	* : Migration from CVS to subversion.

	* quota.c : Added -l (login) option.

	* quota.h : Make /etc/quota.conf the default.
	
	* ChangeLog : Reformatted.

2003-01-21 Jim Garlick <garlick@llnl.gov>

	* : tag quota-1-4-1

2002-12-08 Jim Garlick <garlick@llnl.gov>

	* : Updated source file headers and DISCLAIMER file according 
	to release instructions.

	* : Ran through "indent --no-tabs -kr *.[ch]" and installed standard
	vi footers.

	* Make-rpm.mk : Updated to latest.

	* : tag quota-1-3-1chaos.

2002-11-19 Jim Garlick <garlick@llnl.gov>

	* ChangeLog : Reformatted

	* COPYING, DISCLAIMER: New.

	* : Updated headers for (c) Regents.

	* quota.c : Check a couple of ignored system call return values.

	* quota.1 : Added BUGS section.

2002-04-29 Jim Garlick <garlick@llnl.gov>

	* quota.c : Cleanup including tear-down of rpc client.

	* quota.c : Added debug flag (-d).

	* : tag quota-1-2-4chaos.

2002-04-23 Jim Garlick <garlick@llnl.gov>

	* quota.spec :  Force /etc/quota.conf.

	* : tag quota-1-2-3chaos.

2002-04-11 Jim Garlick <garlick@llnl.gov>

	* quota.c : Some minor code cleanup.

	* quota.c : Use T/G/K abbreviations in 'file' quota report (GNATS#50)

2002-04-10 Jim Garlick <garlick@llnl.gov>

	* quota.c : Add -f option to read config file from user-specified path.

	* quota.c : Tru64 users in more than sixteen 
	groups would fail authunix_create_default().  
	Call authunix_create() instead [Dave Fox, GNATS #48].

	* quota.h : Look for quota.conf in /usr/local/etc and override 
	to /etc for spec file on Linux.

	* : tag quota-1-2-2chaos.

2002-04-03 Jim Garlick <garlick@llnl.gov>

	* quota.c : Minor cleanup.

	* quota.c : Fix overflow problem in OVERTHRESH macro in quota.c 
	where 25G used of 100G quota triggered 90% exceeded message.

	* : Minor cleanup and RPMification for Linux.

	* quota.h : Changed quota.conf path to /etc.

	* : tag quota-1-2-1chaos.

2001-xx-xx Jim Garlick <garlick@llnl.gov>
