@@ -1,11 +1,21 @@
-/g/g0:po.llnl.gov:/vol/g0/g0:90
-/g/g1:x2.llnl.gov:/vol/g1/g1:90
-/g/g2:q9.llnl.gov:/vol/g299/g2:90
-/g/g16:c3.llnl.gov:/vol/g16/g16:90
-/g/g17:po.llnl.gov:/vol/g17/g17:90
-/g/g18:q9.llnl.gov:/vol/g18/g18:90
-/g/g19:x2.llnl.gov:/vol/g19/g19:90
-/g/g20:c3.llnl.gov:/vol/g20/g20:90
-/g/g21:y0.llnl.gov:/vol/g21/g21:90 
-/g/g90:x2.llnl.gov:/vol/g90/g90:90
-/g/g99:q9.llnl.gov:/vol/g299/g99:90
+INVALID:nine.llnl.gov:/blah:90
+/g/g0:bert.llnl.gov:/vol/bertv1/g0:90
+/g/g10:bert.llnl.gov:/vol/bertv2/g10:90
+/g/g11:elmo.llnl.gov:/vol/elmov2/g11:90
+/g/g12:ernie.llnl.gov:/vol/erniev1/g12:90
+/g/g13:elmo.llnl.gov:/vol/elmov5/g13:90
+/g/g14:ernie.llnl.gov:/vol/erniev3/g14:90
+/g/g15:ernie.llnl.gov:/vol/erniev4/g15:90
+/g/g16:elmo.llnl.gov:/vol/elmov3/g16:90
+/g/g17:ernie.llnl.gov:/vol/erniev5/g17:90
+/g/g18:elmo.llnl.gov:/vol/elmov6/g18:90
+/g/g19:elmo.llnl.gov:/vol/elmov7/g19:90
+/g/g20:ernie.llnl.gov:/vol/erniev6/g20:90
+/g/g21:elmo.llnl.gov:/vol/elmov1/g21:90 
+/g/g22:elmo.llnl.gov:/vol/elmov4/g22:90
+/g/g23:bert.llnl.gov:/vol/bertv6/g23:90
+/g/g24:ernie.llnl.gov:/vol/erniev2/g24:90
+/g/g90:bert.llnl.gov:/vol/bertv3/g90:90
+/g/g91:bert.llnl.gov:/vol/bertv4/g91:90
+/g/g92:bert.llnl.gov:/vol/bertv5/g92:90
+/g/g99:bert.llnl.gov:/vol/bertv4/g99:90
